# PaymentsSystem

./: .env.example  README.md  backend.dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
api/v1/: urls.py
api/v1/payments/: serializers.py  views.py
apps/payments/: models.py
apps/payments/migrations/: 0001_initial.py
config/: settings.py
